# Xoptfoil-JX

./: .gitignore  CMakeLists.txt  ChangeLog  README-JX  Vergleich_camb_thick_hicks_henne.xfl  build_linux.sh  build_windows.bat  changelog.md  packager.bat  packager_worker.bat  particle_viewer.py  particles.csv  readme.md  xoptfoil_visualizer-jx.py
doc/: Planform_Creator_Short_instruction.odt  Strak_Machine_Reference.odt  Strak_Machine_Short_instruction.odt  Xfoil_worker.odt  Xoptfoil-JX Reference 1.70beta.odt  Xoptfoil-JX Reference.odt  Xoptfoil-JX.odt  Xoptfoil_visualizer-JX Reference.odt  Xoptfoil_visualizer-JX.odt  strak_machine_rc_network.odt  ~$ptfoil-JX Reference.odt
doc/Architecture/: Xflr5_meets_Xoptfoil-JX.odp
doc/Old/: Xoptfoil-JX Description.odt
examples/: Readme.txt
examples/1_Hello_Optimizer/: Readme.txt  SD7003mod.inp  make-SD7003mod.bat  visualize-SD7003mod.bat
examples/2_Targets_and_Dynamic/: MH32mod.inp  Readme.txt  make-MH32mod.bat  visualize-MH32mod.bat
examples/3_Hicks-Henne_OhNo/: JX-bad.inp  Readme.txt  make-JX-bad.bat  visualize-JX-bad.bat
examples/4_Hicks-Henne_F3F/: F3F-Example.inp  Polars-T1-n7.inp  Readme.txt  make-F3F.bat  visualize-F3F.bat
examples/Acro root medium/: Readme.txt  iSD-root.txt  make-SD-root.bat  start-visualizer.bat
examples/Acro strak medium/: Readme.txt  iSD-strak.txt  make-SD-strak.bat  start-visualizer.bat
examples/F3F high end/: Readme.txt  iJX-FXevo-15.txt  iJX-FXrcn-15.txt  iJX-GX-15.txt  iPolars-T1-n7.txt  iPolars-T1.txt  iPolars-T2-n7.txt  iPolars-T2.txt  make-JX-FXevo.bat  make-JX-GX.bat  make-airfoil.bat  start-visualizer.bat
examples/F3F polars/: Readme.txt  iPolars.txt  make-polars.bat
examples/JX Seed/: Readme.txt
examples/Matching foils/: Readme.txt  animate-camb-thick.bat  animate-hicks-henne.bat  imatch-camb-thick.txt  imatch-hicks-henne.txt  match-camb-thick.bat  match-hicks-henne.bat
examples/Seed airfoils/: Readme.txt
examples/Smooth foil/: Readme.txt  Smooth_HD45.bat  Smooth_all.bat  iSmooth.txt
src/fortran/: a_playground.f90  airfoil_evaluation.f90  airfoil_operations.f90  airfoil_preparation.f90  airfoil_shape_bezier.f90  genetic_algorithm.f90  input_output.F90  input_sanity.f90  main.f90  math_deps.f90  memory_util.f90  optimization_driver.f90  optimization_util.F90  os_util.f90  parametrization.f90  particle_swarm.f90  polar_opartions.f90  simplex_search.f90  vardef.f90  x5_api.f90  x5_api_tester.f90  xfoil_driver.f90  xfoil_inc.f90  xfoil_only.f90  xfoil_worker.f90
src/fortran/naca456_deps/: splprocs.f90
src/fortran/xfoil_deps/: xfoil_geom.f
src/python/: FLZ_Vortex_export.py  best_airfoil.py  change_airfoilname.py  change_polarname.py  make_040k.bat  make_060k.bat  make_080k.bat  make_100k.bat  make_strak.bat  particle_viewer.py  planform_creator.py  show_status.py  start_visu.py  strak_machine.py  strak_machineV2.py  strak_machineV3.py  strak_machine_gui.py  strakmachine_GUI.py  visu_130k.bat  visu_160k.bat  visu_70k.bat  xoptfoil_visualizer-jx.py
src/python/ressources/: iOpt.txt  iOpt_HH.txt  iPolars_T1.txt  iPolars_T2.txt  plane_template.xml  planformdata.txt  planformdata_V_JX.txt  planformdata_bezier.txt  planformdata_root.txt  planformdata_tail.txt  planformdata_wing.txt  planformdata_wing_with_fuselage.txt  strakdata.txt  strakdata_match.txt  wing.xml
src/python/ressources/presets/: iAcro_strak.txt  iF3F_strak.txt  iGeneric.txt  iGeneric_HH.txt  iMatchPolarFoils.txt  iMatchPolarFoils_HH.txt  iPolars_T1.txt  iPolars_T2.txt  (+1 more)
strak_machine/: Readme.txt  make_strakmachine_instant.bat  make_strakmachine_pure.bat  pip_install.bat
strak_machine/batch_files/: create_all_planforms.bat  create_root_airfoil.bat  create_tail_planform.bat  create_wing_planform.bat  show_status.bat  start_strakmachine.bat  strakmachine_gui.bat
strak_machine/ressources/: iOpt.txt  planformdata_userAirfoilNames.txt  planformdata_wing.txt  strakdata.txt
strak_machine/testcases/FX-strak/: iFX-strak.txt  iFX-tip.txt  make-Fx-strak.bat
strak_machine/testcases/FX-strak_WIP/: iFX-strak.txt  iFX-tip.txt  make-Fx-strak.bat
strak_machine/testcases/Fx-wing/: README  fx_strakdata.txt  fx_strakdata_pre.txt  fx_strakdata_root.txt  iFX-strak.txt  iFX-strak_pre.txt  iFX-strak_root.txt  iFX-tip.txt  iFX-tip_pre.txt  iFX-tip_root.txt  make_fx_wing.bat  planformdata.txt
strak_machine/testcases/SA7036-Strak/: iSA-strak.txt  iSA-tip.txt  iSA7036-strak.txt  iSA7036-tip.txt  make-SA-strak.bat
strak_machine/testcases/SD7003-strak/: README  iSD-root.txt  iSD-strak.txt  make-SD-strak.bat
strak_machine/testcases/Strakmachine/: Visu_1.bat  Visu_2.bat  Visu_3.bat  Visu_4.bat  Visu_5.bat  make_strak.bat  visu_100k.bat  visu_130k.bat  visu_160k.bat  visu_190k.bat  visu_70k.bat
strak_machine/testcases/Strakmachine_RG15-strak/: start_strakmachine.bat
(+20 files in other folders)
